syntax = "proto3";

package api.cdc.v1;

import "google/protobuf/timestamp.proto";
import "google/protobuf/empty.proto";

option go_package = "ecommerce/api/cdc/v1;v1";

// CDC 变更数据捕获服务定义了所有与数据变更捕获和分发相关的RPC接口。
service CDC {
  // --- 核心CDC接口 ---

  // CaptureChange 捕获并记录数据变更。
  rpc CaptureChange(CaptureChangeRequest) returns (google.protobuf.Empty);
  // StreamChanges 流式传输数据变更。
  rpc StreamChanges(StreamChangesRequest) returns (stream ChangeEvent);
}

// --- 消息定义 ---

// ChangeEvent 代表一个数据变更事件。
message ChangeEvent {
  string table_name = 1;
  string operation_type = 2; // INSERT, UPDATE, DELETE
  map<string, string> old_data = 3; // 变更前的数据 (UPDATE 和 DELETE)
  map<string, string> new_data = 4; // 变更后的数据 (INSERT 和 UPDATE)
  google.protobuf.Timestamp change_timestamp = 5;
}

// CaptureChangeRequest 捕获变更请求消息。
message CaptureChangeRequest {
  string table_name = 1;
  string operation_type = 2;
  map<string, string> old_data = 3;
  map<string, string> new_data = 4;
}

// StreamChangesRequest 流式传输变更请求消息。
message StreamChangesRequest {
  repeated string table_names = 1;
  optional google.protobuf.Timestamp since_timestamp = 2;
}